New Json output for Annotation Visualizer. Contain all reports for System View, Package View and Class View